[package]
name = "pqc-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
rand_core = { version = "0.6", features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pqc_bench"
harness = false
