[package]
name = "pqc-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
zeroize = { version = "1.8", features = ["derive"] }
rand_core = { version = "0.6", features = ["std"] }
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pqc_bench"
harness = false
